kubernetes/talk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  talk
  labels:
    app:  talk
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: talk
      version: v1
  template:
    metadata:
      labels:
        app: talk
        version: v1
    spec:
      restartPolicy: Always
      containers:
      - name:  talk
        image: danding19931115/movie-micro:latest
        imagePullPolicy: IfNotPresent
        command: ["./talk"]
        resources: {}
        ports:
        - containerPort:  80
          name:  talk
