kubernetes/talk/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: talk
  name: talk
spec:
  ports:
    - name: talk
      port: 80
      targetPort: talk
  selector:
    app: talk
